# mollie-octopus-sync

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  commitlint.config.cjs  eslint.config.js  index.html  knope.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  logger.rs  main.rs  secrets.rs
src/api/: emailoctopus.test.ts  emailoctopus.ts  errors.ts  mollie.test.ts  mollie.ts
src/components/: Button.tsx  MainView.tsx  SettingsView.tsx  SetupWizard.tsx  Spinner.tsx  SyncProgress.tsx  UpdateBanner.tsx
src/lib/: tauri.ts  updater.ts
src/sync/: engine.ts  normalize.test.ts  normalize.ts  useSync.ts
tests/stubs/: tauri-plugin-http.ts
