[package]
name = "mollie-octopus-sync"
version = "0.0.5"
description = "Mollie -> EmailOctopus contact sync"
authors = ["AuditeMarlow"]
edition = "2021"

[lib]
name = "mollie_octopus_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
# Pinned to v3 deliberately. Upstream's v4 README says "do _not_ update";
# the v4 line is now just sample code, with the real library extracted
# into the `keyring-core` crate plus per-platform backends. Migrating
# means a non-trivial rewrite we can't fully test from a non-Windows
# dev machine. Dependabot is told to skip major-version bumps on this
# dep in .github/dependabot.yml.
#
# `windows-native` is REQUIRED — keyring 3.x ships with zero default
# features, so without this flag the crate is a no-op stub: writes
# return Ok without persisting anything, reads always come back empty.
# That's exactly the bug v0.0.4 shipped with.
keyring = { version = "3", features = ["windows-native"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
